Change Title, disabled languages

--- a/config.toml
+++ b/config.toml
@@ -2,13 +2,13 @@
 # https://github.com/pacollins/hugo-future-imperfect-slim/wiki/config.toml
 baseurl                 = "https://quirky-lewin-6331f7.netlify.app"
 DefaultContentLanguage  = "en"
-title                   = "Hugo Future Imperfect Slim"
+title                   = "Delevens Blog"
 theme                   = "hugo-future-imperfect-slim"
 paginate                = 3
 disqusShortname         = ""
 googleAnalytics         = ""
 pluralizeListTitles     = false
-disableLanguages        = []
+disableLanguages        = [true]
 
 [markup.goldmark.renderer]
   unsafe                = true
