update social media links

--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ disableLanguages        = ["true"]
   readingTime           = true
   imageStretch          = "v"
   removeBlur            = false
-  socialShare           = ["twitter", "facebook", "reddit", "linkedin", "pinterest", "email"]
+  socialShare           = ["twitter", "facebook", "reddit", "email"]
   hideEmptyStats        = false
   toc                   = true
   tocWords              = 400
@@ -334,50 +334,50 @@ disableLanguages        = ["true"]
 
 [social]
   # Coding Communities
-  github                = "pacollins/hugo-future-imperfect-slim"
-  gitlab                = ""
-  stackoverflow         = "" # User Number
-  bitbucket             = ""
-  jsfiddle              = ""
-  codepen               = ""
+  github                = "GSB-Deleven/blog"
+  #gitlab                = ""
+  #stackoverflow         = "" # User Number
+  #bitbucket             = ""
+  #jsfiddle              = ""
+  #codepen               = ""
   # Visual Art Communities
-  deviantart            = ""
-  flickr                = "example"
-  behance               = ""
-  dribbble              = ""
+  #deviantart            = ""
+  #flickr                = "example"
+  #behance               = ""
+  #dribbble              = ""
   # Publishing Communities
-  wordpress             = ""
-  medium                = ""
+  #wordpress             = ""
+  #medium                = ""
   # Professional/Business Oriented Communities
-  linkedin              = "example"
-  linkedin_company      = "examplebusiness"
-  foursquare            = ""
-  xing                  = ""
-  slideshare            = ""
+  #linkedin              = "example"
+  #linkedin_company      = "examplebusiness"
+  #foursquare            = ""
+  #xing                  = ""
+  #slideshare            = ""
   # Social Networks
-  facebook              = "example"
-  googleplus            = ""
-  reddit                = "example"
-  quora                 = ""
-  youtube               = ""
-  vimeo                 = ""
-  whatsapp              = "" # WhatsApp Number
+  #facebook              = "example"
+  #googleplus            = ""
+  reddit                = "Deleven"
+  #quora                 = ""
+  youtube               = "GSBDeleven"
+  #vimeo                 = ""
+  #whatsapp              = "" # WhatsApp Number
     # WeChat and QQ need testing.
-    wechat              = ""
-    qq                  = "" # User ID Number
-  instagram             = "example"
-  tumblr                = ""
-  twitter               = "example"
-  strava                = ""
-  skype                 = ""
-  snapchat              = ""
-  pinterest             = "example"
-  telegram              = "example"
-  vine                  = ""
-  googlescholar         = ""
-  orcid                 = ""
-  researchgate          = "example"
-  keybase               = "example"
-  mastodon              = "example.com/@example"
+    #wechat              = ""
+    #qq                  = "" # User ID Number
+  #instagram             = "example"
+  #tumblr                = ""
+  twitter               = "GSB_Deleven"
+  #strava                = ""
+  #skype                 = ""
+  #snapchat              = ""
+  #pinterest             = "example"
+  telegram              = "gsb_deleven"
+  #vine                  = ""
+  #googlescholar         = ""
+  #orcid                 = ""
+  #researchgate          = "example"
+  #keybase               = "example"
+  #mastodon              = "example.com/@example"
   # Email
-  email                 = "example"
+  email                 = "dave@deleven.ch"
