remove social share in post

--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ disableLanguages        = ["true"]
   readingTime           = true
   imageStretch          = "v"
   removeBlur            = false
-  socialShare           = ["twitter", "facebook", "reddit", "email"]
+  socialShare           = []
   hideEmptyStats        = false
   toc                   = true
   tocWords              = 400
