--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ DefaultContentLanguage  = "en"
 title                   = "Delevens Blog"
 theme                   = "hugo-future-imperfect-slim"
 paginate                = 3
-disqusShortname         = "Deleven"
+disqusShortname         = ""
 googleAnalytics         = ""
 pluralizeListTitles     = false
 disableLanguages        = ["true"]
